// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`styleHandler > .steps @icestack/ui case 0 1`] = `
".steps .step-primary+.step-primary:before,.steps .step-primary:after {
      --tw-bg-opacity: 1;
      background-color: rgba(var(--ice-primary) / var(--tw-bg-opacity));
      --tw-text-opacity: 1;
      color: rgba(var(--ice-primary-content) / var(--tw-text-opacity));
    }"
`;

exports[`styleHandler > :hover remove case 0 1`] = `""`;

exports[`styleHandler > :hover remove case 0 revert 1`] = `".a:hover{color:red;}"`;

exports[`styleHandler > :hover remove case 1 1`] = `".b{color:red;}"`;

exports[`styleHandler > :hover remove case 1 revert 1`] = `".b,.a:hover{color:red;}"`;

exports[`styleHandler > add postcss plugins case 0 1`] = `
"::before,::after {
    --tw-content: ""
}
view,text,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  ;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
}
  "
`;

exports[`styleHandler > before,after content case 1`] = `
".after_c_ml-0_d_5::after {
  content: var(--tw-content);
  margin-left: 0.125rem;
}
.after_c_ml-0::after {
  content: var(--tw-content);
  margin-left: 0;
}
.after_c_text-red-500::after {
  content: var(--tw-content);
  --tw-text-opacity: 1;
  color: rgb(239 68 68 / var(--tw-text-opacity));
}
.after_c_content-_bl__dq__a__dq__br_::after {
  --tw-content: "*";
  content: var(--tw-content);
}
.after_c_content-_bl__a__br_::after {
  --tw-content: *;
  content: var(--tw-content);
}
@media (prefers-color-scheme: dark) {
  .after_c_bg-zinc-800 {
    --tw-bg-opacity: 1;
    background-color: rgb(39 39 42 / var(--tw-bg-opacity));
  }
  .after_c_bg-green-500 {
    --tw-bg-opacity: 1;
    background-color: rgb(34 197 94 / var(--tw-bg-opacity));
  }
}
"
`;

exports[`styleHandler > css @media case 1`] = `
"@media (min-width: 640px) {
  .smctext-3xl {
    font-size: 60rpx;
    line-height: 72rpx;
  }
}
"
`;

exports[`styleHandler > css @media hover case 0 1`] = `
"
      a {
        color: white;
        background: black;
      }"
`;

exports[`styleHandler > css @media hover case 1 1`] = `""`;

exports[`styleHandler > cssPreflightRange option all 1`] = `"::before,::after{--tw-border-opacity: 1;}"`;

exports[`styleHandler > cssPreflightRange option view 1`] = `"::before,::after{--tw-border-opacity: 1;}"`;

exports[`styleHandler > global variables scope matched case 1`] = `":before,:after{--tw-:'test'}"`;

exports[`styleHandler > guess css var scoped 1`] = `
"::before,::after {
      --tw-content: ""}
view,text,::before,::after {
      --tw-border-spacing-x: 0;
      --tw-border-spacing-y: 0;
      --tw-translate-x: 0;
      --tw-translate-y: 0;
      --tw-rotate: 0;
      --tw-skew-x: 0;
      --tw-skew-y: 0;
      --tw-scale-x: 1;
      --tw-scale-y: 1;
      --tw-pan-x:  ;
      --tw-pan-y:  ;
      --tw-pinch-zoom:  ;
      --tw-scroll-snap-strictness: proximity;
      --tw-gradient-from-position:  ;
      --tw-gradient-via-position:  ;
      --tw-gradient-to-position:  ;
      --tw-ordinal:  ;
      --tw-slashed-zero:  ;
      --tw-numeric-figure:  ;
      --tw-numeric-spacing:  ;
      --tw-numeric-fraction:  ;
      --tw-ring-inset:  ;
      --tw-ring-offset-width: 0px;
      --tw-ring-offset-color: #fff;
      --tw-ring-color: rgb(59 130 246 / 0.5);
      --tw-ring-offset-shadow: 0 0 #0000;
      --tw-ring-shadow: 0 0 #0000;
      --tw-shadow: 0 0 #0000;
      --tw-shadow-colored: 0 0 #0000;
      --tw-blur:  ;
      --tw-brightness:  ;
      --tw-contrast:  ;
      --tw-grayscale:  ;
      --tw-hue-rotate:  ;
      --tw-invert:  ;
      --tw-saturate:  ;
      --tw-sepia:  ;
      --tw-drop-shadow:  ;
      --tw-backdrop-blur:  ;
      --tw-backdrop-brightness:  ;
      --tw-backdrop-contrast:  ;
      --tw-backdrop-grayscale:  ;
      --tw-backdrop-hue-rotate:  ;
      --tw-backdrop-invert:  ;
      --tw-backdrop-opacity:  ;
      --tw-backdrop-saturate:  ;
      --tw-backdrop-sepia:  
  ;
      box-sizing: border-box;
      border-width: 0;
      border-style: solid;
      border-color: currentColor}"
`;

exports[`styleHandler > https://github.com/tailwindlabs/tailwindcss/pull/14625/files 1`] = `
"[hidden]:where(:not([hidden="until-found"])) {
  display: none;
}"
`;

exports[`styleHandler > injectAdditionalCssVarScope option true 1`] = `
"view,text,::after,::before {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x:  ;
  --tw-pan-y:  ;
  --tw-pinch-zoom:  ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position:  ;
  --tw-gradient-via-position:  ;
  --tw-gradient-to-position:  ;
  --tw-ordinal:  ;
  --tw-slashed-zero:  ;
  --tw-numeric-figure:  ;
  --tw-numeric-spacing:  ;
  --tw-numeric-fraction:  ;
  --tw-ring-inset:  ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur:  ;
  --tw-brightness:  ;
  --tw-contrast:  ;
  --tw-grayscale:  ;
  --tw-hue-rotate:  ;
  --tw-invert:  ;
  --tw-saturate:  ;
  --tw-sepia:  ;
  --tw-drop-shadow:  ;
  --tw-backdrop-blur:  ;
  --tw-backdrop-brightness:  ;
  --tw-backdrop-contrast:  ;
  --tw-backdrop-grayscale:  ;
  --tw-backdrop-hue-rotate:  ;
  --tw-backdrop-invert:  ;
  --tw-backdrop-opacity:  ;
  --tw-backdrop-saturate:  ;
  --tw-backdrop-sepia:  ;
  --tw-contain-size:  ;
  --tw-contain-layout:  ;
  --tw-contain-paint:  ;
  --tw-contain-style:  ;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}
::before,::after {
  --tw-content: "";
}
::backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0rpx;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
}
"
`;

exports[`styleHandler > injectAdditionalCssVarScope option true and replace universal 1`] = `
"view,text,button,::after,::before {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x:  ;
  --tw-pan-y:  ;
  --tw-pinch-zoom:  ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position:  ;
  --tw-gradient-via-position:  ;
  --tw-gradient-to-position:  ;
  --tw-ordinal:  ;
  --tw-slashed-zero:  ;
  --tw-numeric-figure:  ;
  --tw-numeric-spacing:  ;
  --tw-numeric-fraction:  ;
  --tw-ring-inset:  ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur:  ;
  --tw-brightness:  ;
  --tw-contrast:  ;
  --tw-grayscale:  ;
  --tw-hue-rotate:  ;
  --tw-invert:  ;
  --tw-saturate:  ;
  --tw-sepia:  ;
  --tw-drop-shadow:  ;
  --tw-backdrop-blur:  ;
  --tw-backdrop-brightness:  ;
  --tw-backdrop-contrast:  ;
  --tw-backdrop-grayscale:  ;
  --tw-backdrop-hue-rotate:  ;
  --tw-backdrop-invert:  ;
  --tw-backdrop-opacity:  ;
  --tw-backdrop-saturate:  ;
  --tw-backdrop-sepia:  ;
  --tw-contain-size:  ;
  --tw-contain-layout:  ;
  --tw-contain-paint:  ;
  --tw-contain-style:  ;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}
::before,::after {
  --tw-content: "";
}
::backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0rpx;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
}
"
`;

exports[`styleHandler > injectAdditionalCssVarScope option true isMainChunk false 1`] = `
"::backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0rpx;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
}
"
`;

exports[`styleHandler > main chunk build error 1`] = `
"::before,::after {
  --tw-content: "";
}

view,text,::before,::after {
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}

.-m-_l_20px_r_ {
  margin: -20rpx;
}

.-mt-2 {
  margin-top: -0.5rem;
}

.mb-_l_-20px_r_ {
  margin-bottom: -20rpx;
}

.flex {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
}

.grid {
  display: grid;
}

.h-_l_100px_r_ {
  height: 100rpx;
}

.max-h-_l_100px_r_ {
  max-height: 100rpx;
}

.min-h-_l_100px_r_ {
  min-height: 100rpx;
}

.w-_l_300rpx_r_ {
  width: 300rpx;
}

.w-_l_100px_r_ {
  width: 100rpx;
}

.w-32 {
  width: 8rem;
}

.min-w-_l_300rpx_r_ {
  min-width: 300rpx;
}

.max-w-_l_300rpx_r_ {
  max-width: 300rpx;
}

.resize {
  resize: both;
}

.grid-cols-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr));
}

.items-center {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.justify-center {
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.space-y-_l_1-dot-6rem_r_>view+view {
  --tw-space-y-reverse: 0;
  margin-top: calc(1.6rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(1.6rem * var(--tw-space-y-reverse));
}

.divide-x-_l_10px_r_>view+view {
  --tw-divide-x-reverse: 0;
  border-right-width: calc(10rpx * var(--tw-divide-x-reverse));
  border-left-width: calc(10rpx * calc(1 - var(--tw-divide-x-reverse)));
}

.divide-solid>view+view {
  border-style: solid;
}

.divide-_l__h_010101_r_>view+view {
  --tw-divide-opacity: 1;
  border-color: rgb(1 1 1 / var(--tw-divide-opacity));
}

.rounded-_l_40px_r_ {
  border-radius: 40rpx;
}

.rounded-md {
  border-radius: 0.375rem;
}

.border-_l_10px_r_ {
  border-width: 10rpx;
}

.border-solid {
  border-style: solid;
}

.border-_l__h_098765_r_ {
  --tw-border-opacity: 1;
  border-color: rgb(9 135 101 / var(--tw-border-opacity));
}

.border-opacity-_l_0-dot-44_r_ {
  --tw-border-opacity: 0.44;
}

.bg-_l__h_123456_r_,.bg-pink-500 {
  --tw-bg-opacity: 1;
  background-color: rgb(18 52 86 / var(--tw-bg-opacity));
}

.bg-pink-500 {
  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
}

.bg-opacity-_l_0-dot-54_r_ {
  --tw-bg-opacity: 0.54;
}

.p-_l_20px_r_ {
  padding: 20rpx;
}

.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.text-_l_20px_r_ {
  font-size: 20rpx;
}

.font-semibold {
  font-weight: 600;
}

.leading-_l_0-dot-9_r_ {
  line-height: 0.9;
}

.text-_l__h_dddddd_r_,.text-black {
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

.text-_l__h_dddddd_r_ {
  color: rgb(221 221 221 / var(--tw-text-opacity));
}

.text-_l__h_ffffff_r_,.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-opacity-_l_0-dot-19_r_ {
  --tw-text-opacity: 0.19;
}

.ring-4 {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4rpx + var(--tw-ring-offset-width)) var(--tw-ring-color);
  -webkit-box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
}

.ring-pink-300 {
  --tw-ring-opacity: 1;
  --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity));
}
"
`;

exports[`styleHandler > new option for customRuleCallback kbone 1`] = `
"::before,::after {
  --tw-content: ""}

view,.h5-a,.h5-abbr,.h5-address,.h5-area,.h5-article,.h5-aside,.h5-audio,.h5-b,.h5-base,.h5-bdi,.h5-bdo,.h5-blockquote,.h5-big,.h5-body,.h5-br,.h5-button,.h5-canvas,.h5-caption,.h5-center,.h5-cite,.h5-code,.h5-col,.h5-colgroup,.h5-data,.h5-datalist,.h5-dd,.h5-del,.h5-dfn,.h5-dir,.h5-div,.h5-dl,.h5-dt,.h5-em,.h5-fieldset,.h5-figcaption,.h5-figure,.h5-footer,.h5-form,.h5-h1,.h5-h2,.h5-h3,.h5-h4,.h5-h5,.h5-h6,.h5-header,.h5-hgroup,.h5-hr,.h5-i,.h5-iframe,.h5-img,.h5-input,.h5-ins,.h5-kbd,.h5-label,.h5-legend,.h5-li,.h5-link,.h5-main,.h5-map,.h5-mark,.h5-menu,.h5-nav,.h5-ol,.h5-optgroup,.h5-option,.h5-output,.h5-p,.h5-param,.h5-pre,.h5-progress,.h5-q,.h5-s,.h5-samp,.h5-section,.h5-select,.h5-small,.h5-source,.h5-span,.h5-strong,.h5-sub,.h5-sup,.h5-table,.h5-tbody,.h5-td,.h5-textarea,.h5-tfoot,.h5-th,.h5-thead,.h5-time,.h5-title,.h5-tt,.h5-tr,.h5-track,.h5-u,.h5-ul,.h5-video,.h5-wbr,.h5-strike,.h5-details,.h5-summary,page,::after,::before {
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
  --tw-ring-inset: var(--tw-empty, );
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 transparent;
  --tw-ring-shadow: 0 0 transparent;
  --tw-shadow: 0 0 transparent
;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor}

.-mt-2 {
  margin-top: -.5rem
}

.mb-_l_-20px_r_ {
  margin-bottom: -20px
}

.flex {
  display: flex
}

.grid {
  display: grid
}

.h-_l_200_pct__r_ {
  height: 200%
}

.h-_l_100px_r_ {
  height: 100px
}

.max-h-_l_100px_r_ {
  max-height: 100px
}

.min-h-_l_100px_r_ {
  min-height: 100px
}

.w-_l_300rpx_r_ {
  width: 300rpx
}

.w-_l_100px_r_ {
  width: 100px
}

.w-32 {
  width: 8rem
}

.min-w-_l_300rpx_r_ {
  min-width: 300rpx
}

.max-w-_l_300rpx_r_ {
  max-width: 300rpx
}

.grid-cols-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr))
}

.items-center {
  align-items: center
}

.justify-center {
  justify-content: center
}

.rounded-_l_40px_r_ {
  border-radius: 40px
}

.rounded-md {
  border-radius: .375rem
}

.border {
  border-width: 1px
}

.border-_l_10px_r_ {
  border-width: 10px
}

.border-solid {
  border-style: solid
}

.border-_l__h_098765_r_ {
  --tw-border-opacity: 1;
  border-color: rgba(9, 135, 101, var(--tw-border-opacity))
}

.border-opacity-_l_0-dot-44_r_ {
  --tw-border-opacity: 0.44
}

.bg-_l__h_123456_r_ {
  --tw-bg-opacity: 1;
  background-color: rgba(18, 52, 86, var(--tw-bg-opacity))
}

.bg-pink-500 {
  --tw-bg-opacity: 1;
  background-color: rgba(236, 72, 153, var(--tw-bg-opacity))
}

.bg-opacity-_l_0-dot-54_r_ {
  --tw-bg-opacity: 0.54
}

.p-_l_20px_r_ {
  padding: 20px
}

.py-2 {
  padding-top: .5rem;
  padding-bottom: .5rem
}

.text-_l_20px_r_ {
  font-size: 20px
}

.font-semibold {
  font-weight: 600
}

.leading-_l_0-dot-9_r_ {
  line-height: .9
}

.text-black {
  --tw-text-opacity: 1;
  color: rgba(0, 0, 0, var(--tw-text-opacity))
}

.text-_l__h_dddddd_r_ {
  --tw-text-opacity: 1;
  color: rgba(221, 221, 221, var(--tw-text-opacity))
}

.text-_l__h_ffffff_r_,.text-white {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity))
}

.text-opacity-_l_0-dot-19_r_ {
  --tw-text-opacity: 0.19
}

.ring-4 {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 transparent)
}

.ring-pink-300 {
  --tw-ring-opacity: 1;
  --tw-ring-color: rgba(249, 168, 212, var(--tw-ring-opacity))
}"
`;

exports[`styleHandler > tailwindcss v2 jit should append view selector 1`] = `"::before,::after{--tw-border-opacity: 1;}"`;

exports[`styleHandler > use with weapp-pandacss case 0  1`] = `
"::before,::after{--tw-content: "";}
view,text,::before,::after{--tw-border-opacity: 1;--tw-border-opacity: 1;box-sizing: border-box;border-width: 0;border-style: solid;border-color: currentColor;}"
`;

exports[`styleHandler > use with weapp-pandacss case 1  1`] = `
"::before,::after{--tw-content: "";}
view,text,::before,::after{--tw-border-opacity: 1;--tw-border-opacity: 1;box-sizing: border-box;border-width: 0;border-style: solid;border-color: currentColor;}"
`;

exports[`styleHandler > use with weapp-pandacss case 2  1`] = `
"::before,::after{--tw-content: "";}
view,text,::before,::after{--tw-border-opacity: 1;--tw-border-opacity: 1;box-sizing: border-box;border-width: 0;border-style: solid;border-color: currentColor;}"
`;

exports[`styleHandler > use with weapp-pandacss case 2.1  1`] = `
"::before,::after{--tw-content: "";}
view,text,::before,::after{--tw-border-opacity: 1;--tw-border-opacity: 1;box-sizing: border-box;border-width: 0;border-style: solid;border-color: currentColor;}"
`;

exports[`styleHandler > use with weapp-pandacss case 3  1`] = `
"::before,::after{--tw-content: "";}
view,text,::before,::after{--tw-border-opacity: 1;--tw-border-opacity: 1;box-sizing: border-box;border-width: 0;border-style: solid;border-color: currentColor;}"
`;

exports[`styleHandler > use with weapp-pandacss case 4  1`] = `".space-y-4>view+view{--tw-border-opacity: 1;--tw-border-opacity: 1;}"`;

exports[`styleHandler > utf8 charset 1`] = `
".after_c_content-_bl__q_u6211u662fu4f2au5143u7d20_q__br_::after {
    --tw-content: '我是伪元素';
    content: var(--tw-content)
}"
`;
